trunk/Archive2/12/f9a83938b94190/output
main.cpp: In function 'int main()':
main.cpp:12:24: error: no matching function for call to 'Blah::Blah(<brace-enclosed initializer list>)'
     auto b = Blah{1,2.0};
                        ^
main.cpp:12:24: note: candidates are:
main.cpp:3:8: note: constexpr Blah::Blah(const Blah&)
 struct Blah
        ^
main.cpp:3:8: note:   candidate expects 1 argument, 2 provided
main.cpp:3:8: note: constexpr Blah::Blah(Blah&&)
main.cpp:3:8: note:   candidate expects 1 argument, 2 provided
